# bgfx-starter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  MyApplication.cpp  bgfx-application.cpp  bgfx-application.hpp  mesh.hpp
src/shaders/: fs - Copy.sc  fs.sc  varying.def.sc  vs - Copy.sc  vs.sc
